Fixed note spacing and layout

--- a/client/src/styles/container.css
+++ b/client/src/styles/container.css
@@ -1,4 +1,4 @@
 .container {
-    width: 80%;
+    width: 1190px;
     margin: 0 auto;
 }
