--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -1,6 +1,6 @@
 .header {
     background: #f7cb1b;
-    color: rgba(3, 0, 3, 0.795);
+    color: rgb(41, 44, 44);
     height: 7rem;
     margin-bottom: 1.6rem;
     box-shadow: 0 2px 5px rgba(78, 76, 80, 0.185);
@@ -8,7 +8,12 @@
 
 .header h1 {
     font-size: 47px;
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Ubuntu Condensed', sans-serif;
     margin: 0;
+    /* margin-left: 1.35rem; */
     padding-top: 1rem;
-}
+    font-weight: 300;
+}   
+
+
+
